--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Bot de WhatsApp para gestão escolar",
   "main": "index.js",
+  "engines": {
+  "node": ">=20.0.0"
+},
   "scripts": {
     "start": "node index.js"
   },
