--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Bot de WhatsApp para gestão escolar",
   "main": "index.js",
   "engines": {
-  "node": ">=20.0.0"
-},
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "start": "node index.js"
   },
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pino": "^9.2.0",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0"
   }
 }
